Fix background on small devices

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,4 +1,5 @@
 body {
+	background-image: url("../images/background.png");
 	font-family: sans-serif;
 	color: #757575;
 }
@@ -9,7 +10,7 @@ body {
 	justify-content: space-around;
 	align-items: center;
 	height: 100vh;
-	background-image: url("../images/background.png");
+	// background-image: url("../images/background.png");
 
 	.chat {
 		width: 60%;
@@ -163,8 +164,8 @@ body {
 
 // Widget home page
 .home-page {
-	@media (max-width: 568px) {
-		// height: auto;
+	@media (max-width: 768px) {
+		height: auto;
 	}
 }
 .login-page {
